syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "github.com/honey-badger-io/honey-badger/pb";

package hb;

service Data {
    rpc Set(SetRequest) returns (google.protobuf.Empty) {}
    rpc Get(KeyRequest) returns (GetResult) {}
    rpc Delete(KeyRequest) returns (google.protobuf.Empty) {}
    rpc DeleteByPrefix(PrefixRequest) returns (google.protobuf.Empty) {}
    rpc CreateReadStream(ReadStreamReq) returns (stream DataItem) {}
    rpc CreateSendStream(stream SendStreamReq) returns (google.protobuf.Empty) {}
}

service Db {
    rpc Create(CreateDbReq) returns (google.protobuf.Empty) {}
    rpc Drop(DropDbRequest) returns (google.protobuf.Empty) {}
    rpc Exists(ExistsDbReq) returns (ExistsDbRes) {}
    rpc EnsureDb(CreateDbReq) returns (google.protobuf.Empty) {}
    rpc List(google.protobuf.Empty) returns (DbListRes) {}
}

service Sys {
    rpc Ping(PingRequest) returns (PingResult) {}
}

message SetRequest {
    string db = 1;
    string key = 2;
    bytes data = 3;
    optional int32 ttl = 4;
}

message KeyRequest {
    string db = 1;
    string key = 2;
}

message GetResult {
    bool hit = 1;
    bytes data = 2;
}

message PrefixRequest {
    string db = 1;
    string prefix = 2;
}

message CreateDbOpt {
    bool inMemory = 1;
}

message CreateDbReq {
    string name = 1;
    CreateDbOpt opt = 2;
}

message DropDbRequest {
    string name = 1;
}

message PingRequest {}

message PingResult {
    string mesage = 1;
}

message ReadStreamReq {
    string db = 1;
    optional string prefix = 2;
}

message SendStreamReq {
    DataItem item = 1;
    string db = 2;
}

message DataItem {
    string key = 1;
    bytes data = 2;
}

message ExistsDbReq {
    string name = 1;
}

message ExistsDbRes {
    bool exists = 1;
}

message DbListItem {
    string Name = 1;
    bool InMemory = 2;
}

message DbListRes {
    repeated DbListItem Dbs = 1;
}
